# sandwich_ws

./: .gitignore  README.md
src/sandwich_robot/: CMakeLists.txt  README.md  package.xml
src/sandwich_robot/config/: initial_positions.yaml  panda_moveit_config_demo.rviz  ros2_controllers_demo.yaml  ros2_controllers_sim.yaml
src/sandwich_robot/launch/: demo.launch.py  pick_and_place.launch.py  sim.launch.py
src/sandwich_robot/scripts/: pick_and_place.py  plan_and_execute.py  print_ee_pose.py  scene_publisher.py
src/sandwich_robot/urdf/: panda.urdf  panda_fake.urdf.xacro  panda_gazebo.urdf.xacro
src/sandwich_robot/worlds/: pick_and_place.sdf  table.sdf
